# cmakeCurl

./: README.md
cmakeCurl/: CMakeLists.txt  build.gradle
cmakeCurl/src/androidTest/java/a54nb/example/com/myapplication/: ExampleInstrumentedTest.java
cmakeCurl/src/main/: AndroidManifest.xml
cmakeCurl/src/main/java/a54nb/example/com/myapplication/: MainActivity.java
cmakeCurl/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt
cmakeCurl/src/main/jni/lib/: CMakeLists.txt
cmakeCurl/src/main/libs/armeabi/: curltest
cmakeCurl/src/main/libs/armeabi-v7a/: curltest
cmakeCurl/src/main/libs/x86/: curltest
cmakeCurl/src/main/res/layout/: activity_main.xml
cmakeCurl/src/test/java/a54nb/example/com/myapplication/: ExampleUnitTest.java
